Wed Mar 28 09:54:33 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Fix typos in another old entry.

Wed Mar 28 09:53:00 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: DatabaseCoruptError -> DatabaseCorruptError in old entries.

Wed Mar 28 08:05:13 GMT 2012  Olly Betts <olly@survex.com>

	* tests/termgentest.cc: Add test coverage for discarding of terms > 64
	  bytes by TermGenerator.

Tue Mar 27 21:07:07 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Note when Database::close() was added.

Tue Mar 27 13:03:22 GMT 2012  Olly Betts <olly@survex.com>

	* api/omenquire.cc,docs/deprecation.rst,include/xapian/enquire.h,
	  include/xapian/errorhandler.h: Deprecate Xapian::ErrorHandler.
	  (ticket#3)

Tue Mar 27 13:01:53 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,docs/deprecation.rst,docs/doxygen_api.conf.in,
	  docs/doxygen_source.conf.in: Updates for addition of
	  XAPIAN_DEPRECATED_EX() and XAPIAN_DEPRECATED_CLASS_EX.

Tue Mar 27 10:11:23 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,include/xapian.h,include/xapian/deprecated.h: Add
	  XAPIAN_DEPRECATED_EX() and XAPIAN_DEPRECATED_CLASS_EX macros which
	  mark a feature as deprecated externally but not when building the
	  library.

Tue Mar 27 08:46:29 GMT 2012  Olly Betts <olly@survex.com>

	* api/compactor.cc: Include the xapian sub-headers we actually use
	  rather than xapian.h, to avoid needless rebuilds.

Tue Mar 27 08:33:28 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: Add example of deprecating a pure virtual method.

Tue Mar 27 08:30:17 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Mar 24 12:33:44 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc: Fix signed vs unsigned
	  comparison warning with GCC 4.4.3.

Sat Mar 24 12:26:13 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser_internal.h:
	  Change the default stemming strategy to STEM_SOME, to eliminate